--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -44,7 +44,7 @@ $h4: 18px;
 
 @import 'templates/_slider.scss';
 
-@import 'templates/_call-to-action.scss';
+// @import 'templates/_call-to-action.scss';
 
 @import 'templates/_service.scss';
 
