--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -22,7 +22,7 @@
         {{ end }}
       </div>
     </div>
-    <div class="row counter-box text-center mt-50">
+    <!-- <div class="row counter-box text-center mt-50">
       {{ range .funfacts }}
       <div class="col-md-2">
         <div class="counter-item">
@@ -32,7 +32,7 @@
         </div>
       </div>
       {{ end }}
-    </div>
+    </div> -->
   </div>
 </section>
 {{ end }}
@@ -72,7 +72,7 @@
     <div class="row">
       {{ if .Params.testimonial.enable }}
       {{ with .GetPage "/" }}
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <div class="testimonial-carousel text-center">
           <div class="testimonial-slider owl-carousel">
             {{ range .Params.funfacts.testimonial_slider }}
@@ -87,7 +87,7 @@
             {{ end }}
           </div>
         </div>
-      </div>
+      </div> -->
       {{ end }}
       {{ end }}
 
