--- a/layouts/index.html
+++ b/layouts/index.html
@@ -86,7 +86,7 @@
 <!-- /call to action -->
 
 <!-- funfacts -->
-{{ with .Params.funfacts }}
+<!-- {{ with .Params.funfacts }}
 {{ if .enable }}
 <section class="testimonial">
   <div class="container">
@@ -130,7 +130,7 @@
   </div>
 </section>
 {{ end }}
-{{ end }}
+{{ end }} -->
 <!-- /funfacts -->
 
 {{ end }}
