--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -1,4 +1,4 @@
-{{ with site.GetPage "/" }}
+<!-- {{ with site.GetPage "/" }}
 {{ with .Params.cta }}
 <section class="call-to-action bg-1 section-sm overly" style="background-image: url('{{ .bg_image | relURL }}');">
   <div class="container">
@@ -18,4 +18,4 @@
   </div>
 </section>
 {{ end }}
-{{ end }}
+{{ end }} -->
