--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
             {{ end }}
           </ul>
         </div>
-        <p class="copyright">{{ site.Params.copyright | markdownify }}</p>
+        <!-- <p class="copyright">{{ site.Params.copyright | markdownify }}</p> -->
       </div>
     </div>
   </div>
