--- a/assets/scss/templates/_portfolio.scss
+++ b/assets/scss/templates/_portfolio.scss
@@ -17,7 +17,7 @@
           color: lighten( $black, 20 );
           outline: 0;
           background: $white;
-          margin: 2px;
+          margin: 5px;
           border-radius: 0;
           @include transition (all, 0.3s, ease);
         }
@@ -27,14 +27,20 @@
 }
 
 .portfolio {
-  justify-items: center;
+  justify-items:center;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  align-self: center;
   &-item {
     position: relative;
     padding: 0;
 
     img {
-      width: 80%;
+      width: 90%;
       height: auto;
+      padding-left: 20%;
+      padding-bottom: 10%;
     }
 
     &:hover {
