--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
 <!-- checking blog -->
 {{ if or (eq .Section "post") (eq .Section "posts") (eq .Section "blog") (eq .Section "blogs") (eq .Section "news") (eq .Section "categories") (eq .Section "tags") }}
 
-<section class="page-wrapper">
+<!-- <section class="page-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
@@ -44,7 +44,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- regular page -->
 {{ else -}}
