--- a/layouts/project/list.html
+++ b/layouts/project/list.html
@@ -31,14 +31,14 @@
             {{ $cats := .Params.category -}}
             {{ if not (reflect.IsSlice $cats) }}{{ $cats = slice ($cats) }}{{ end -}}
             {{ $cats = apply $cats "urlize" "." | jsonify -}}
-            <div class="col-md-4 portfolio-item shuffle-item" data-groups="{{ $cats }}">
+            <div class="col-md-12 portfolio-item shuffle-item" data-groups="{{ $cats }}">
               {{ if isset .Params "image" -}}
               <img src="{{ .Params.image | relURL }}" alt="{{ .Title }}">
               {{- end }}
               <div class="portfolio-hover">
                 <div class="portfolio-content">
-                  <a class="h3" href="{{ .RelPermalink }}">{{ .Title }}</a>
-                  <p>{{ .Params.description }}</p>
+                  <a class="h3" href="{{ .Params.description }}">{{ .Title }}</a>
+                  <!-- <p>{{ .Params.description }}</p> -->
                 </div>
               </div>
             </div>
