--- a/assets/scss/templates/_portfolio.scss
+++ b/assets/scss/templates/_portfolio.scss
@@ -29,10 +29,12 @@
 .portfolio {
 
   &-item {
+    margin-left: 6%;
     position: relative;
     padding: 0;
 
     img {
+
       width: 90%;
       height: auto;
       padding: 5%;
