--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
 <div class="page-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         {{ $paginator := .Paginate .Data.Pages -}}
         {{ range $paginator.Pages -}}
         <div class="post">
@@ -47,13 +47,13 @@
         {{ $lower_limit := (add $adjacent_links 1) -}}
         {{ $upper_limit := (sub $paginator.TotalPages $adjacent_links) -}}
         {{ if gt $paginator.TotalPages 1 -}}
-        <nav class="text-center">
-          <ul class="pagination post-pagination">
+        <!-- <nav class="text-center"> -->
+          <!-- <ul class="pagination post-pagination"> -->
             <!-- Previous page. -->
             {{ if $paginator.HasPrev -}}
-            <li>
+            <!-- <li>
               <a href="{{ $paginator.Prev.URL }}" class="page-link">{{ i18n "page_prev" }}</a>
-            </li>
+            </li> -->
             {{- end }}
             <!-- Page numbers. -->
             {{ range $paginator.Pagers -}}
@@ -86,21 +86,21 @@
             {{ end -}}
             <!-- Output page numbers. -->
             {{ if eq $page_number_flag true -}}
-            <li class="{{ if eq . $paginator }} active {{ end }}">
+            <!-- <li class="{{ if eq . $paginator }} active {{ end }}">
               <a href="{{ .URL }}">
                 {{ .PageNumber }}
               </a>
-            </li>
+            </li> -->
             {{- end }}
             {{- end }}
             <!-- Next page. -->
             {{ if $paginator.HasNext -}}
-            <li>
-              <a href="{{ $paginator.Next.URL }}">{{ i18n "page_next" }}</a>
-            </li>
+            <!-- <li>
+              <a href="{{ $paginator.Next.URL }}">{{ i18n "page_next" }}</a> -->
+            <!-- </li> -->
             {{- end }}
-          </ul>
-        </nav>
+          <!-- </ul>
+        </nav> -->
         {{- end }}
       </div>
       <!-- <div class="col-md-4">
